--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cordova-plugin-device-accounts",
+  "name": "cordova-device-accounts",
   "version": "1.0.1",
   "description": "Cordova plugin to get the device accounts on Android",
   "main": "index.js",
