--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:rim="http://www.blackberry.com/ns/widgets"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-device-accounts"
+        id="cordova-device-accounts"
         version="1.0.1">
     <name>Device Accounts</name>
     <description>Cordova Device Accounts Plugin</description>
